# tvm

./: CMakeLists.txt  pyproject.toml
.github/workflows/: sync_with_main.yml
apps/bundle_deploy/crt_config/: crt_config.h
apps/cpp_rpc/: CMakeLists.txt
apps/microtvm/reference-vm/: base-box-tool.py
apps/microtvm/zephyr/: microtvm_api_server.py
apps/microtvm/zephyr/aot_demo/: CMakeLists.txt
apps/microtvm/zephyr/aot_demo/src/: zephyr_uart.c
apps/microtvm/zephyr/template_project/: CMakeLists.txt  microtvm_api_server.py
apps/microtvm/zephyr/template_project/src/aot_demo/: main.c  zephyr_uart.c  zephyr_uart.h
cmake/: config.cmake
cmake/modules/: Hexagon.cmake  StandaloneCrt.cmake
cmake/modules/contrib/: CMSIS.cmake
cmake/modules/launchers/: rpc_server.sh.template
cmake/utils/: FindCUDA.cmake
docker/install/: ubuntu_install_arduino.sh
gallery/how_to/work_with_microtvm/: micro_tflite.py
include/tvm/node/: attr_registry_map.h
include/tvm/relax/: backend.h  transform.h
include/tvm/tir/: transform.h
include/tvm/topi/: nn.h
python/tvm/contrib/: __init__.py  cmsis.py  launcher.py  remote.py
python/tvm/driver/: build_module.py
python/tvm/micro/: __init__.py  build.py  model_library_format.py  project.py  session.py  transport.py
python/tvm/relax/: __init__.py  aot.py
python/tvm/relay/: build_module.py
python/tvm/rpc/: client.py
python/tvm/runtime/: module.py
src/auto_scheduler/: feature.cc
src/driver/: driver_api.cc
src/ir/: transform.cc
src/meta_schedule/task_scheduler/: task_scheduler.cc
src/printer/: relax_script_printer.cc  text_printer.h
src/relax/op/: op.cc
src/relax/transform/: call_tir_rewrite.cc
src/relax/usmp/: unified_static_memory_planner.cc  utils.cc
src/relay/backend/: aot_executor_codegen.cc  build_module.cc
src/relay/ir/: expr_functor.cc
src/relay/transforms/: fuse_ops.cc
src/runtime/aot_executor/: aot_executor.cc  aot_executor.h
src/runtime/crt/: Makefile  crt_config-template.h
src/runtime/hexagon/: hexagon_module.h
src/runtime/micro/: micro_session.cc
src/runtime/minrpc/: rpc_reference.h
src/runtime/rpc/: rpc_endpoint.cc  rpc_local_session.cc  rpc_socket_impl.cc
src/runtime/vm/: executable.cc
src/tir/schedule/: traced_schedule.cc  (+1 more)
tests/lint/: check_file_type.py
tests/scripts/: task_prepare_pytest.sh  task_python_hexagon.sh  task_python_microtvm.sh
tutorials/micro/: autotune_utvm.py  micro_autotune.py
(+111 files in other folders)
